# maxquant_mapping

./: CMakeLists.txt  main.cpp
